----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-07-29 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, lang/*: new message $strAndThen
	* libraries/dbg/profiling.php: patch #1160439, improvements,
	  thanks to Glen Arason
	* scripts/upgrade.pl: patch #1198492, current version check,
	  thanks to Herman van Rink - helmo

2005-07-28 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: Go button renamed to Save because it's really used to save coordinates

2005-07-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug #1243908, left panel browse icon alt tag not updated
      after inserting a row
    * config.inc.php, libraries/config_import.lib.php, /common.lib.php:
      RFE #1177459, BOOL column type

2005-07-26 Michal Čihař  <michal@cihar.com>
    * export.php: Use actual MIME type for CSV.

2005-07-25 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: insert another new row: dropdown choice should be sticky

2005-07-24 Michal Čihař  <michal@cihar.com>
    * libraries/check_user_privileges.lib.php: Undefined variable (bug
      #1243885).
    * libraries/config_import.lib.php: Do not override theme properties when
      path is not set.
    * libraries/select_theme.lib.php: Do not attempt to sort themes when
      themes are disabled (bug #1243883).

2005-07-23 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php, tbl_properties.inc.php:
      bug #1157230, escape special chars in ENUM or SET

2005-07-22 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: table creation should not be possible
      in information_schema
    * db_operations.php: those operations do not make sense on
      information_schema
    * browse_foreigners.php: bug #1242805, Show All does not work while
      browsing foreign values
    * libraries/relation.lib.php: for the new ForeignKeyDropdownOrder, id and