@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-08-01 Marc Delisle  <lem9@users.sourceforge.net>
+    * libraries/common.lib.php: bug #1249239, XSS vulnerability on Create page
+
 2005-07-29 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_change.php, lang/*: new message $strAndThen
 	* libraries/dbg/profiling.php: patch #1160439, improvements,
